Creating the login session hudnle with error

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,3 @@
-<<<<<<< HEAD
-/.venv
-.venv/
-/__pycache__/
-__pycache__/
-db.sqlite3
-.venv
-=======
 .venv
 */__pycache__/
->>>>>>> itbienvenu
+__pycache__
