--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,36 @@
+annotated-types==0.7.0
+anyio==4.12.0
 asgiref==3.11.0
 certifi==2025.11.12
 cffi==2.0.0
 charset-normalizer==3.4.4
 cryptography==46.0.3
+distro==1.9.0
 dj-database-url==3.0.1
 Django==5.2.8
 django-allauth==65.13.1
 django-htmx==1.27.0
 dotenv==0.9.9
+groq==0.37.1
 gunicorn==23.0.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
 idna==3.11
 packaging==25.0
 pillow==12.0.0
 psycopg2-binary==2.9.11
 pycparser==2.23
+pycryptodome==3.23.0
+pydantic==2.12.5
+pydantic_core==2.41.5
 pydotenv==0.0.7
 PyJWT==2.10.1
 python-dotenv==1.2.1
 requests==2.32.5
+sniffio==1.3.1
 sqlparse==0.5.4
+typing-inspection==0.4.2
+typing_extensions==4.15.0
 urllib3==2.6.2
 whitenoise==6.11.0
-groq
-pycryptodome
